ip geolocations fetched

--- a/betterWrapped.ipynb
+++ b/betterWrapped.ipynb
@@ -412,6 +412,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f3658c1",
+   "metadata": {},
+   "source": [
+    "https://developer.spotify.com/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "b7d5adf0",
@@ -485,6 +493,60 @@
    "outputs": [],
    "source": [
     "df = df.merge(df_artist_genre, on='artist_name', how='left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "365ea449",
+   "metadata": {},
+   "source": [
+    "## Fetching location (based on ip-adress)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01695c45",
+   "metadata": {},
+   "source": [
+    "https://github.com/ipinfo/python?tab=readme-ov-file#lite-api\n",
+    "https://ipinfo.io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "442100df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipinfo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f334460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "access_token = '44f4e46f292505'\n",
+    "handler = ipinfo.getHandler(access_token)\n",
+    "ip_address = '84.74.88.79'\n",
+    "details = handler.getDetails(ip_address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69b9a986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "details.city\n",
+    "details.region\n",
+    "details.country\n",
+    "details.country_name\n",
+    "details.loc"
    ]
   },
   {
@@ -634,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9f09c804",
    "metadata": {},
    "outputs": [],
@@ -654,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "2495597a",
    "metadata": {},
    "outputs": [
@@ -752,7 +814,7 @@
        "9                             Hunting High and Low       6.4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
