--- a/betterWrapped.ipynb
+++ b/betterWrapped.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 195,
    "id": "e8d5239f",
    "metadata": {},
    "outputs": [],
@@ -28,8 +28,37 @@
     "import os\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
-    "import pycountry\n",
-    "import seaborn as sns"
+    "import pycountry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ae30123",
+   "metadata": {},
+   "source": [
+    "## Loading API-Keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "a61e2f5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -50,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 197,
    "id": "21cc5f47",
    "metadata": {},
    "outputs": [
@@ -210,7 +239,7 @@
        "[3 rows x 23 columns]"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 198,
    "id": "7bb2ce76",
    "metadata": {},
    "outputs": [
@@ -291,7 +320,7 @@
        "      <td>Let You Love Me</td>\n",
        "      <td>Rita Ora</td>\n",
        "      <td>Let You Love Me</td>\n",
-       "      <td>spotify:track:6xtcFXSo8H9BZN637BMVKS</td>\n",
+       "      <td>6xtcFXSo8H9BZN637BMVKS</td>\n",
        "      <td>clickrow</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
@@ -315,10 +344,10 @@
        "      <td>Let You Love Me</td>\n",
        "      <td>Rita Ora</td>\n",
        "      <td>Let You Love Me</td>\n",
-       "      <td>spotify:track:6xtcFXSo8H9BZN637BMVKS</td>\n",
+       "      <td>6xtcFXSo8H9BZN637BMVKS</td>\n",
        "      <td>clickrow</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.008681</td>\n",
+       "      <td>0.000145</td>\n",
        "      <td>Switzerland</td>\n",
        "      <td>2018-11-12</td>\n",
        "      <td>2018</td>\n",
@@ -339,10 +368,10 @@
        "      <td>Happier</td>\n",
        "      <td>Marshmello</td>\n",
        "      <td>Happier</td>\n",
-       "      <td>spotify:track:2dpaYNEQHiRxtZbfNsse99</td>\n",
+       "      <td>2dpaYNEQHiRxtZbfNsse99</td>\n",
        "      <td>clickrow</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.026736</td>\n",
+       "      <td>0.000446</td>\n",
        "      <td>Switzerland</td>\n",
        "      <td>2018-11-12</td>\n",
        "      <td>2018</td>\n",
@@ -369,25 +398,20 @@
        "1      12500           CH  84.74.88.79  Let You Love Me    Rita Ora   \n",
        "2      38500           CH  84.74.88.79          Happier  Marshmello   \n",
        "\n",
-       "        album_name                     spotify_track_uri reason_start  ...  \\\n",
-       "0  Let You Love Me  spotify:track:6xtcFXSo8H9BZN637BMVKS     clickrow  ...   \n",
-       "1  Let You Love Me  spotify:track:6xtcFXSo8H9BZN637BMVKS     clickrow  ...   \n",
-       "2          Happier  spotify:track:2dpaYNEQHiRxtZbfNsse99     clickrow  ...   \n",
+       "        album_name       spotify_track_uri reason_start  ...  d_played  \\\n",
+       "0  Let You Love Me  6xtcFXSo8H9BZN637BMVKS     clickrow  ...  0.000000   \n",
+       "1  Let You Love Me  6xtcFXSo8H9BZN637BMVKS     clickrow  ...  0.000145   \n",
+       "2          Happier  2dpaYNEQHiRxtZbfNsse99     clickrow  ...  0.000446   \n",
        "\n",
-       "   d_played  country_name        date  year  month  day      time  hour  \\\n",
-       "0  0.000000   Switzerland  2018-11-12  2018     11   12  19:09:12    19   \n",
-       "1  0.008681   Switzerland  2018-11-12  2018     11   12  19:09:31    19   \n",
-       "2  0.026736   Switzerland  2018-11-12  2018     11   12  19:11:02    19   \n",
-       "\n",
-       "   minute  second  \n",
-       "0       9      12  \n",
-       "1       9      31  \n",
-       "2      11       2  \n",
+       "   country_name        date  year  month  day      time  hour  minute  second  \n",
+       "0   Switzerland  2018-11-12  2018     11   12  19:09:12    19       9      12  \n",
+       "1   Switzerland  2018-11-12  2018     11   12  19:09:31    19       9      31  \n",
+       "2   Switzerland  2018-11-12  2018     11   12  19:11:02    19      11       2  \n",
        "\n",
        "[3 rows x 29 columns]"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +424,7 @@
     "df[\"s_played\"] = df[\"ms_played\"]/1000\n",
     "df[\"min_played\"] = df[\"s_played\"]/60\n",
     "df[\"h_played\"] = df[\"min_played\"]/60\n",
-    "df[\"d_played\"] = df[\"min_played\"]/24\n",
+    "df[\"d_played\"] = df[\"h_played\"]/24\n",
     "df[\"country_name\"] = df[\"country_code\"].map(lambda x : pycountry.countries.get(alpha_2=x).name if pycountry.countries.get(alpha_2=x) else \"Unbekannt\")\n",
     "df[\"date\"] = df[\"ts\"].dt.date\n",
     "df[\"year\"] = df[\"ts\"].dt.year\n",
@@ -410,7 +434,37 @@
     "df[\"hour\"] = df[\"ts\"].dt.hour\n",
     "df[\"minute\"] = df[\"ts\"].dt.minute\n",
     "df[\"second\"] = df[\"ts\"].dt.second\n",
+    "df[\"spotify_track_uri\"] = df[\"spotify_track_uri\"].str.split(':').str[-1]\n",
     "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94fed85f",
+   "metadata": {},
+   "source": [
+    "## Fetching data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "2a86995a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "0681ac74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not \"fetched_data\" in os.listdir():\n",
+    "    os.mkdir(\"fetched_data\")"
    ]
   },
   {
@@ -418,7 +472,7 @@
    "id": "5735d83d",
    "metadata": {},
    "source": [
-    "## Fetching genres"
+    "### Fetching genres"
    ]
   },
   {
@@ -431,31 +485,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 201,
    "id": "b7d5adf0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "from spotipy.client import SpotifyException\n",
-    "import requests"
+    "from spotipy.client import SpotifyException"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 202,
    "id": "a8a53a1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = \"0c5021071fbd4a9fabc9b31b278aaae7\"\n",
-    "CLIENT_SECRET = \"d2cce0d0a87d433e96f0a8d4d5bf3b51\""
+    "CLIENT_ID = os.getenv(\"CLIENT_ID\")\n",
+    "CLIENT_SECRET = os.getenv(\"CLIENT_SECRET\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 203,
    "id": "7ead6d5a",
    "metadata": {},
    "outputs": [],
@@ -466,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 204,
    "id": "7607c59e",
    "metadata": {},
    "outputs": [],
@@ -487,24 +540,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 205,
    "id": "48e815bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not \"artist_genre.csv\" in os.listdir():\n",
+    "if not \"artist_genre.csv\" in os.listdir(\"fetched_data\"):\n",
     "    artists = df[\"artist_name\"].unique()\n",
     "    list_artist_genre = [[artist, fetch_artist_genre(sp, artist)] for artist in artists]\n",
     "    list_artist_genre = [[artist, \", \".join(genres)] for artist, genres in list_artist_genre]\n",
     "    df_artist_genre = pd.DataFrame(list_artist_genre, columns=[\"artist_name\", \"genre\"])\n",
-    "    df_artist_genre.to_csv(\"artist_genre.csv\", index=False)\n",
+    "    df_artist_genre.to_csv(\"fetched_data/artist_genre.csv\", index=False)\n",
     "else:\n",
-    "    df_artist_genre = pd.read_csv(\"artist_genre.csv\")"
+    "    df_artist_genre = pd.read_csv(\"fetched_data/artist_genre.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 206,
    "id": "4097bcc7",
    "metadata": {},
    "outputs": [],
@@ -517,7 +570,7 @@
    "id": "365ea449",
    "metadata": {},
    "source": [
-    "## Fetching IP geolocation"
+    "### Fetching IP geolocation"
    ]
   },
   {
@@ -531,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 207,
    "id": "442100df",
    "metadata": {},
    "outputs": [],
@@ -541,17 +594,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 208,
    "id": "37dec1b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "access_token = \"44f4e46f292505\""
+    "access_token = os.getenv(\"access_token\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 209,
    "id": "3f334460",
    "metadata": {},
    "outputs": [],
@@ -561,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 210,
    "id": "dc724760",
    "metadata": {},
    "outputs": [],
@@ -582,22 +635,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 211,
    "id": "961e7ce0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not \"ip_loc.csv\" in os.listdir():\n",
+    "if not \"ip_loc.csv\" in os.listdir(\"fetched_data\"):\n",
     "    list_ip_loc = [[ip, fetch_ip_loc(handler, ip).loc, fetch_ip_loc(handler, ip).city, fetch_ip_loc(handler, ip).region] for ip in df[\"ip\"].unique()]\n",
     "    df_ip_loc = pd.DataFrame(list_ip_loc, columns=[\"ip\", \"geo_loc\", \"city_name\", \"region_name\"])\n",
-    "    df_ip_loc.to_csv(\"ip_loc.csv\", index=False)\n",
+    "    df_ip_loc.to_csv(\"fetched_data/ip_loc.csv\", index=False)\n",
     "else:\n",
-    "    df_ip_loc = pd.read_csv(\"ip_loc.csv\")"
+    "    df_ip_loc = pd.read_csv(\"fetched_data/ip_loc.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 212,
    "id": "c010577c",
    "metadata": {},
    "outputs": [],
@@ -607,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 213,
    "id": "d447f80e",
    "metadata": {},
    "outputs": [],
@@ -615,6 +668,79 @@
     "df[[\"lat\", \"lon\"]] = df[\"geo_loc\"].str.split(\",\", expand=True)\n",
     "df[\"lat\"] = df[\"lat\"].astype(float)\n",
     "df[\"lon\"] = df[\"lon\"].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6810afb8",
+   "metadata": {},
+   "source": [
+    "### Fetching track infos (Paid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "881af191",
+   "metadata": {},
+   "source": [
+    "https://rapidapi.com/soundnet-soundnet-default/api/track-analysis/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "a1c3bf6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "API_KEY = os.getenv(\"API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "d4934ad3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://track-analysis.p.rapidapi.com/pktx/analysis\"\n",
+    "\n",
+    "headers = {\n",
+    "\t\"x-rapidapi-key\": API_KEY,\n",
+    "\t\"x-rapidapi-host\": \"track-analysis.p.rapidapi.com\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "id": "ad6fc85d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not \"track_info.csv\" in os.listdir(\"fetched_data\"):\n",
+    "    df_track_info = pd.DataFrame()\n",
+    "    for track in df[\"track_name\"].unique()[:3]:\n",
+    "        querystring  = {\"song\": track}\n",
+    "        response = requests.get(url, headers=headers, params=querystring).json()\n",
+    "        response[\"track_name\"] = track\n",
+    "        df_track_info = pd.concat([df_track_info, pd.json_normalize(response)])\n",
+    "    df_track_info[\"loudness\"] = df_track_info[\"loudness\"].str.replace(\" dB\", \"\", regex=False).astype(int)\n",
+    "    df_track_info[\"s_duration\"] = df_track_info[\"duration\"].str.split(\":\").apply(lambda x: int(x[0])*60 + int(x[1]))\n",
+    "    df_track_info = df_track_info.drop(columns=[\"duration\", \"id\"])\n",
+    "    df_track_info.to_csv(\"fetched_data/track_info.csv\", index=False)\n",
+    "else:\n",
+    "    df_track_info = pd.read_csv(\"fetched_data/track_info.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "d479d833",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.merge(df_track_info, on=\"track_name\", how=\"left\")"
    ]
   },
   {
@@ -635,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 218,
    "id": "485e8b42",
    "metadata": {},
    "outputs": [
@@ -644,8 +770,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 85534 entries, 0 to 6541\n",
-      "Data columns (total 29 columns):\n",
+      "RangeIndex: 85534 entries, 0 to 85533\n",
+      "Data columns (total 49 columns):\n",
       " #   Column             Non-Null Count  Dtype              \n",
       "---  ------             --------------  -----              \n",
       " 0   ts                 85534 non-null  datetime64[ns, UTC]\n",
@@ -677,8 +803,28 @@
       " 26  hour               85534 non-null  int32              \n",
       " 27  minute             85534 non-null  int32              \n",
       " 28  second             85534 non-null  int32              \n",
-      "dtypes: bool(4), datetime64[ns, UTC](1), float64(5), int32(6), int64(1), object(12)\n",
-      "memory usage: 15.3+ MB\n"
+      " 29  genre              47469 non-null  object             \n",
+      " 30  geo_loc            85534 non-null  object             \n",
+      " 31  city_name          85534 non-null  object             \n",
+      " 32  region_name        85534 non-null  object             \n",
+      " 33  lat                85534 non-null  float64            \n",
+      " 34  lon                85534 non-null  float64            \n",
+      " 35  key                97 non-null     object             \n",
+      " 36  mode               97 non-null     object             \n",
+      " 37  camelot            97 non-null     object             \n",
+      " 38  tempo              97 non-null     float64            \n",
+      " 39  popularity         97 non-null     float64            \n",
+      " 40  energy             97 non-null     float64            \n",
+      " 41  danceability       97 non-null     float64            \n",
+      " 42  happiness          97 non-null     float64            \n",
+      " 43  acousticness       97 non-null     float64            \n",
+      " 44  instrumentalness   97 non-null     float64            \n",
+      " 45  liveness           97 non-null     float64            \n",
+      " 46  speechiness        97 non-null     float64            \n",
+      " 47  loudness           97 non-null     float64            \n",
+      " 48  s_duration         97 non-null     float64            \n",
+      "dtypes: bool(4), datetime64[ns, UTC](1), float64(18), int32(6), int64(1), object(19)\n",
+      "memory usage: 27.7+ MB\n"
      ]
     }
    ],
@@ -740,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "id": "c489dfe0",
    "metadata": {},
    "outputs": [],
@@ -779,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "id": "1b213c88",
    "metadata": {},
    "outputs": [
@@ -809,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "id": "9f09c804",
    "metadata": {},
    "outputs": [],
@@ -831,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "id": "4987f06d",
    "metadata": {},
    "outputs": [],
@@ -865,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "id": "18dcf138",
    "metadata": {},
    "outputs": [
@@ -904,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "id": "abf9bdf6",
    "metadata": {},
    "outputs": [
@@ -912,7 +1058,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Fabian\\AppData\\Local\\Temp\\ipykernel_24632\\3691092215.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\Fabian\\AppData\\Local\\Temp\\ipykernel_16400\\3691092215.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -938,7 +1084,7 @@
        "Name: s_played, Length: 140, dtype: float64"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": null,
    "id": "aac6e8a8",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1155,7 @@
        "2 2019-03-03    0.000"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "id": "fdafb38d",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1226,7 @@
        "2  2021   211.259"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": null,
    "id": "34717f71",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": null,
    "id": "e190c151",
    "metadata": {},
    "outputs": [],
@@ -1132,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": null,
    "id": "492c593a",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1334,7 @@
        "2     March  4067.361"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "id": "c2375822",
    "metadata": {},
    "outputs": [
