--- a/betterWrapped.ipynb
+++ b/betterWrapped.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 736,
    "id": "e8d5239f",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import time"
+    "import time\n",
+    "import pycountry"
    ]
   },
   {
@@ -1109,16 +1110,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
-   "id": "eebfcc80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pycountry"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 578,
    "id": "fc37602a",
    "metadata": {},
@@ -1166,28 +1157,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 668,
+   "execution_count": 734,
    "id": "95a8fe77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scatter_plot(x_values, y_values, start, end,\n",
-    "                 title=\"Scatter Plot\",\n",
-    "                 x_label=\"X\",\n",
-    "                 y_label=\"Y\"):\n",
+    "def scatter_plot(x_values, y_values, start, end, title=\"Scatter Plot\", x_label=\"X\", y_label=\"Y\"):\n",
     "    fig, ax = plt.subplots(figsize=(7, 4))\n",
     "\n",
-    "    # Punkte zeichnen\n",
     "    scatter = ax.scatter(x_values, y_values, color=\"#4C72B0\", edgecolor=\"black\")\n",
     "\n",
-    "    # Titel und Achsenbeschriftungen\n",
     "    ax.set_title(f\"{title}\\nfrom {start.date()} to {end.date()}\")\n",
     "    ax.set_xlabel(x_label)\n",
     "    ax.set_ylabel(y_label)\n",
     "\n",
     "    plt.setp(ax.get_xticklabels(), rotation=45, ha='right')\n",
     "\n",
-    "    # Grid\n",
     "    ax.grid(linestyle=\"--\", alpha=0.5)\n",
     "\n",
     "    plt.show()\n",
@@ -1265,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
+   "execution_count": 739,
    "id": "06d2ef66",
    "metadata": {},
    "outputs": [
